# grampc-d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/asynchronous/: CMakeLists.txt  async_high_scaled_system.cpp  async_high_scaled_system.py
examples/coupled_cost_functions/: CMakeLists.txt  (+2 more)
grampc-d/: CMakeLists.txt
grampc-d/include/grampcd/agent/: agent.hpp  async_step_selector.hpp  neighbor.hpp  step_selector.hpp  sync_step_selector.hpp
grampc-d/include/grampcd/comm/: communication_interface.hpp  communication_interface_central.hpp  communication_interface_local.hpp  message.hpp  message_handler.hpp
grampc-d/include/grampcd/coord/: coordinator.hpp
grampc-d/include/grampcd/info/: agent_info.hpp  communication_data.hpp  communication_info.hpp  coupling_info.hpp  optimization_info.hpp  tuning_info.hpp
grampc-d/include/grampcd/interface/: dmpc_interface.hpp  interface.hpp  python_interface.hpp
grampc-d/include/grampcd/model/: agent_model.hpp  coupling_model.hpp  model_factory.hpp
grampc-d/include/grampcd/optim/: approximate_neighbor.hpp  optim_util.hpp  problem_description_central.hpp  problem_description_local_default.hpp  problem_description_local_neighbor_approximation.hpp  problem_description_local_sensi.hpp  solution.hpp  solver_central.hpp  solver_local.hpp  solver_local_admm.hpp  solver_local_sensi.hpp
grampc-d/include/grampcd/simulator/: simulator.hpp
grampc-d/include/grampcd/state/: agent_state.hpp  constraint_state.hpp  coupling_state.hpp  multiplier_state.hpp  penalty_state.hpp  sensi_state.hpp
grampc-d/include/grampcd/util/: auto_tune.hpp  class_forwarding.hpp  constants.hpp  data_conversion.hpp  logging.hpp  protocol_communication.hpp  types.hpp
grampc-d/src/agent/: agent.cpp  async_step_selector.cpp  neighbor.cpp  step_selector.cpp  sync_step_selector.cpp
grampc-d/src/comm/: communication_interface.cpp  communication_interface_central.cpp  communication_interface_local.cpp  message.cpp  message_definition.cpp  message_handler.cpp
grampc-d/src/coord/: coordinator.cpp
grampc-d/src/interface/: dmpc_interface.cpp  interface.cpp  python_interface.cpp
grampc-d/src/model/: agent_model.cpp  coupling_model.cpp  model_factory.cpp
grampc-d/src/optim/: approximate_neighbor.cpp  optim_util.cpp  problem_description_central.cpp  problem_description_local_default.cpp  problem_description_local_neighbor_approximation.cpp  problem_description_local_sensi.cpp  solution.cpp  solver_central.cpp  solver_local.cpp  solver_local_admm.cpp  solver_local_sensi.cpp
grampc-d/src/simulator/: simulator.cpp
grampc-d/src/util/: auto_tune.cpp  data_conversion.cpp  logging.cpp  protocol_communication.cpp
libs/: .gitignore  CMakeLists.txt
libs/grampc/: CHANGELOG.txt  LICENSE.txt
libs/grampc/cpp/include/: grampc.hpp  problem_description.hpp
libs/grampc/cpp/src/: grampc.cpp  problem_description.cpp
libs/grampc/include/: euler1.h  eulermod2.h  f2cmod.h  grampc.h  grampc_alloc.h  grampc_fixedsize.h  grampc_init.h  grampc_macro.h  grampc_mess.h  grampc_run.h  grampc_setopt.h  grampc_setparam.h  grampc_util.h  heun2.h  probfct.h  rodas.h  rodas_decsol_f2c.h  ruku45.h  simpson.h  trapezodial.h
libs/grampc/src/: euler1.c  eulermod2.c  grampc_alloc.c  grampc_fixedsize.c  grampc_init.c  grampc_mess.c  grampc_run.c  grampc_setopt.c  grampc_setparam.c  grampc_util.c  heun2.c  rodas.c  ruku45.c  simpson.c  trapezodial.c
main/: CMakeLists.txt
main/coupled_cost_functions/: CMakeLists.txt  coupled_cost_functions.cpp
main/distributed_optimization/: CMakeLists.txt  agent0.cpp  agent0.py  agent1.cpp  agent1.py  agent2.cpp  agent2.py  coordinator.cpp  coordinator.py
main/endless_mode/: CMakeLists.txt  agent0.cpp  agent0.py  agent1.cpp  agent1.py  coordinator.cpp  coordinator.py
main/evaluate_neighborApproximation/: CMakeLists.txt  evaluate_neighborApproximation.cpp  evaluate_neighborApproximation.py
model_description/: CMakeLists.txt  general_model_factory.cpp  general_model_factory.hpp
model_description/include/: general_model_factory.hpp
model_description/oscillators/: CMakeLists.txt
model_description/oscillators/include/: oscillators_agent_model.hpp  oscillators_coupling_model.hpp
model_description/oscillators/src/: oscillators_agent_model.cpp  oscillators_coupling_model.cpp
model_description/scalable_spring_mass_system/include/: ssms_agent_model.hpp  ssms_coupling_model.hpp
model_description/scalable_spring_mass_system/src/: ssms_agent_model.cpp  ssms_coupling_model.cpp
model_description/scalable_spring_mass_system_2D/: CMakeLists.txt
model_description/scalable_spring_mass_system_2D/include/: ssms2d_agent_model.hpp  ssms2d_coupling_model.hpp
model_description/scalable_spring_mass_system_2D/src/: ssms2d_agent_model.cpp  ssms2d_coupling_model.cpp
model_description/scalable_spring_mass_system_3D/include/: ssms3d_agent_model.hpp  ssms3d_coupling_model.hpp
model_description/scalable_spring_mass_system_3D/src/: ssms3d_agent_model.cpp  ssms3d_coupling_model.cpp
model_description/smart_grid/include/: smartGrid_agentModel.hpp  smartGrid_couplingModel.hpp
model_description/smart_grid/src/: smartGrid_agentModel.cpp  smartGrid_couplingModel.cpp
model_description/van_der_pol_oscillator/include/: vdp_agent_model.hpp  vdp_linear_coupling_model.hpp  vdp_nonlinear_coupling_model.hpp  vdp_synchronize_coupling_model.hpp
model_description/van_der_pol_oscillator/src/: vdp_agent_model.cpp  vdp_linear_coupling_model.cpp  vdp_nonlinear_coupling_model.cpp  vdp_synchronize_coupling_model.cpp
model_description/water_tank/: CMakeLists.txt
model_description/water_tank/include/: water_tank_agent_model.hpp  water_tank_coupling_model.hpp
model_description/water_tank/src/: water_tank_agent_model.cpp  water_tank_coupling_model.cpp
unit_tests/: CMakeLists.txt  referenceChecksums.csv  referenceChecksums.txt
unit_tests/include/unit_tests/: checksum_handler.hpp  file_handler.hpp
unit_tests/src/: checksum_handler.cpp  file_handler.cpp  run_unit_test.cpp  setup_unit_test.cpp
(+96 files in other folders)
